<resources>
    <string name="app_name">SafeSpeak</string>
    <string name="login">Log In</string>
    <string name="login_text">Silahkan masuk untuk melanjutkan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ingat">Ingat saya</string>
    <string name="lupa">Forgot Password?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="masuk_dengan">atau masuk dengan</string>
    <string name="belum_punya">belum punya akun?</string>
    <string name="sudah_punya">sudah punya akun?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_kecil">Log in</string>
    <string name="sign_besar">Sign in</string>
    <string name="sign_text">Silahkan daftar untuk membuat akun</string>
    <string name="email">Email</string>
    <string name="confirm_pass">Konfirmasi Password</string>
    <string name="selamat_datang">Selamat Datang\ndi SafeSpeak :D</string>
    <string name="lorem">lorem ipsum</string>
    <string name="swipe">Geser ke atas untuk melanjutkan</string>
    <string name="speak_out">SpeakOut</string>
    <string name="lapor">Laporkan pelecehan seksual yang terjadi di sekitar anda dengan cepat dan terjamin kerahasiaannya.</string>
    <string name="safe_check">SafeCheck</string>
    <string name="safe_net">SafeNet</string>
    <string name="diagnosis">Lakukan diagnosis mandiri terkait pelecehan seksual yang telah dialami.</string>
    <string name="komunitas">Cari komunitas terdekat yang bisa memberikan bantuan atau tempat untuk konsultasi.</string>
    <string name="safe_speak">SafeSpeak</string>
    <string name="aplikasi">Aplikasi lapor kekerasan seksual yang terjadi di sekitar lingkungan anda, diagnosis mandiri, dan menghubungkan dengan komunitas di sekitar anda.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_item">Home</string>
    <string name="lapor_item">Lapor</string>
    <string name="diagnosis_item">Diagnosis</string>
    <string name="komunitas_item">Komunitas</string>
    <string name="profil_item">Profil</string>
    <string name="cek_sekarang">Cek sekarang</string>
    <string name="kenali">Kenali dirimu, lawan rasa takutmu dengan mengecek apakah kamu pernah terindikasi pelecehan seksual tanpa kamu sadari.</string>
    <string name="pertanyaan">Pertanyaan 1 dari 10</string>
    <string name="lanjut">Lanjut</string>
    <string name="lewati">Lewati</string>
    <string name="soal_1">Apakah kamu pernah merasa tidak nyaman atau tertekan oleh tindakan seseorang?</string>
    <string name="pernah">Pernah</string>
    <string name="jarang">Mungkin</string>
    <string name="tidak_pernah">Tidak pernah</string>
    <string name="soal2">Apakah seseorang pernah menyentuh badanmu tanpa izin?</string>
    <string name="soal3">Apakah kamu pernah menerima komentar yang tidak pantas terkait tubuh atau penampilanmu?</string>
    <string name="soal4">Apakah seseorang pernah memaksamu melakukan sesuatu yang tidak kamu inginkan?</string>
    <string name="soal5">Apakah kejadian ini pernah terjadi di tempat umum atau lingkungan kerja/sosial?</string>
    <string name="soal6">Apakah seseorang pernah mengancammu untuk melakukan sesuatu yang tidak kamu inginkan?</string>
    <string name="soal7">Apakah tindakan tersebut terjadi lebih dari satu kali?</string>
    <string name="soal8">Apakah seseorang mencoba mengontrol atau memanipulasimu secara tidak pantas?</string>
    <string name="soal9">Apakah kamu pernah dipaksa untuk memberikan sesuatu dengan cara tidak pantas?</string>
    <string name="soal10">Apakah kejadian tersebut membuat kamu merasa takut, bingung, atau mengalami reaksi fisik seperti gemetar atau mual?</string>
    <string name="persentage">0</string>
    <string name="persen">%</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="mungkin">Mungkin</string>
    <string name="kembali">Kembali</string>
    <string name="tunggu">Tunggu sebentar dulu, hasilmu akan muncul setelah ini</string>
    <string name="analisis_diagnosis">Analisis Diagnosis</string>
    <string name="halo_nama">Halo, nama</string>
    <string name="kembali2">Kembali ke halaman utama</string>
    <string name="konsultasikan">Konsultasi</string>
    <string name="laporkan">Laporkan</string>
</resources>