<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_soal.SoalFragment1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="324.61dp"
        android:layout_height="309.33dp"
        android:layout_gravity="center"
        android:background="@drawable/question_bg">

        <TextView
            android:id="@+id/text_place"
            android:layout_width="278.61dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_place"
            android:text="@string/soal_1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/pjs_bold"/>
        
        <FrameLayout
            android:id="@+id/button_place"
            android:layout_width="wrap_content"
            android:layout_height="155dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_place">
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pernah"
                android:layout_marginTop="5dp"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:background="@drawable/question__btn_bg"
                android:text="@string/pernah"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:fontFamily="@font/pjs_bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/jarang"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/question__btn_bg"
                android:text="@string/jarang"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:fontFamily="@font/pjs_bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tidak_pernah"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@drawable/question__btn_bg"
                android:layout_marginBottom="5dp"
                android:text="@string/tidak_pernah"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:fontFamily="@font/pjs_bold"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>