<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningActivity"
    android:background="@drawable/opening_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/opening_bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/opening_bg3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/pjs_extra_bold"
            android:text="@string/selamat_datang"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/lorem"
            android:textSize="10sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">
        
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/login_btn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@drawable/opening_login_bg"
            android:text="@string/login"
            android:fontFamily="@font/pjs_bold"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/sign_btn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:text="@string/sign_besar"
            android:textAllCaps="false"
            android:fontFamily="@font/pjs_bold"
            android:background="@drawable/opening_sign_bg"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>