<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="0dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_img"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="24dp"
            android:background="@color/violet_3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/violet_3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pjs_extra_bold"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/pjs_medium"
                    android:text="@string/login_text"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_bg2">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/username"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:background="@drawable/text_bg2"
                        android:fontFamily="@font/pjs_medium"
                        android:hint="@string/username"
                        android:paddingStart="51dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:src="@drawable/user_img" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_bg2">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/pass"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:background="@drawable/text_bg2"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="51dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:src="@drawable/lock" />

                    <ImageView
                        android:id="@+id/show_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:paddingStart="0dp"
                        android:paddingEnd="20dp"
                        android:src="@drawable/pass" />
                </FrameLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swtc"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    app:thumbTint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/pjs_regular"
                    android:text="@string/ingat"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:fontFamily="@font/pjs_regular"
                    android:text="@string/lupa"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:textAllCaps="false"
                android:id="@+id/masuk_btn"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_before"
                android:fontFamily="@font/pjs_bold"
                android:text="@string/masuk"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="321dp"
                android:layout_height="96dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:background="@color/violet_3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/pjs_medium"
                    android:text="@string/masuk_dengan"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <FrameLayout
                    android:id="@+id/login_fb"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/radius_bg_white"
                    android:elevation="2dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/fb_logo" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/login_google"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/radius_bg_white"
                    android:elevation="2dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/google_logo" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/pjs_medium"
                    android:text="@string/belum_punya"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginStart="49dp"
                    android:fontFamily="@font/pjs_extra_bold"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>